// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavbarSnapshot should render normal Navbar with visible value is equal to false 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnTZi GyWKw"
  >
    <a
      class="sc-eCYdqJ kQaECE"
      href="#"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
        />
      </svg>
    </a>
    <div
      class="sc-jSMfEi kJYybr"
    >
      <p
        class="sc-dkzDqf hMVRxV"
      >
        Hello,
      </p>
      <p
        class="sc-dkzDqf sc-hKMtZM hMVRxV idCBRc"
      >
        Shipper User
      </p>
      <img
        class="sc-bczRLJ hGUeOa"
        height="30%"
        src="https://randomuser.me/api/portraits/med/men/18.jpg"
        width="30%"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`NavbarSnapshot should render normal Navbar with visible value is equal to true 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnTZi gCnGDm"
  >
    <a
      class="sc-eCYdqJ hAAPjp"
      href="#"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 448 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
        />
      </svg>
    </a>
    <div
      class="sc-jSMfEi kJYybr"
    >
      <p
        class="sc-dkzDqf hMVRxV"
      >
        Hello,
      </p>
      <p
        class="sc-dkzDqf sc-hKMtZM hMVRxV idCBRc"
      >
        Shipper User
      </p>
      <img
        class="sc-bczRLJ hGUeOa"
        height="30%"
        src="https://randomuser.me/api/portraits/med/men/18.jpg"
        width="30%"
      />
    </div>
  </div>
</DocumentFragment>
`;
